add race and class

--- a/app/templates/components/dnd-char.hbs
+++ b/app/templates/components/dnd-char.hbs
@@ -1,5 +1,9 @@
 
-name: {{model.name}}
+<h2>{{model.name}}</h2>
+
+{{screen-shot model=race}}
+
+{{screen-shot model=charClass}}
 
 <h3>powers</h3>
 
