--- a/app/templates/components/dnd-char.hbs
+++ b/app/templates/components/dnd-char.hbs
@@ -22,7 +22,22 @@
 {{screenshots-list title='utility'
                    path='powers/utility/'
                    list=model.powers.utility}}
+<hr>
 
+<h3>feats</h3>
+
+{{screenshots-list title=''
+                   path='feats/'
+                   list=model.feats}}
+<hr>
+
+<h3>features</h3>
+{{screenshots-list title='race'
+                   path='features/race/'
+                   list=model.features.race}}
+{{screenshots-list title='class'
+                   path='features/class/'
+                   list=model.features.charClass}}
 <hr>
 
 <h3>items</h3>
