--- a/app/templates/components/screenshots-list.hbs
+++ b/app/templates/components/screenshots-list.hbs
@@ -1,7 +1,8 @@
 <h4>{{title}}</h4>
 
 {{#each ssItems as |ssItem|}}
-  {{screen-shot model=ssItem}}
+  {{screen-shot model=ssItem
+                path=path}}
 {{/each}}
 
 {{yield}}
