--- a/app/templates/components/dnd-char.hbs
+++ b/app/templates/components/dnd-char.hbs
@@ -7,6 +7,9 @@
 {{screen-shot model=model.charClass
               path='classes/'}}
 
+{{screen-shot model=model.paragon
+              path='paragons/'}}
+
 <h3>powers</h3>
 
 {{screenshots-list title='at will'
@@ -32,6 +35,7 @@
                    list=model.feats}}
 <hr>
 
+<!-- features -->
 <h3>features</h3>
 
 {{screenshots-list title='race'
@@ -40,6 +44,9 @@
 {{screenshots-list title='class'
                    path='features/class/'
                    list=model.features.charClass}}
+{{screenshots-list title='paragon'
+                   path='features/paragon/'
+                   list=model.features.paragon}}
 <hr>
 
 <h3>items</h3>
