--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,17 @@
-<h2 id="title">D&D</h2>
+{{#link-to 'index'}}
+  <h2 id="title">D&D</h2>
+{{/link-to}}
 
-{{dnd-char}}
+<ul>
+  <li>
+    {{link-to 'Davith' 'char' 'davith'}}
+  </li>
+</ul>
+
+<hr>
 
 {{outlet}}
 
 <footer class="text-center">
-D&D
+— D&D —
 </footer>
