--- a/app/templates/components/screen-shot.hbs
+++ b/app/templates/components/screen-shot.hbs
@@ -9,7 +9,7 @@
     {{model.name}}
   </span>
 {{else}}
-  ERROR: missing name.
+  ERROR: `screen-shot` missing model.name
 {{/if}}
 
 {{ss-source source=model.source}}
