--- a/app/templates/components/dnd-char.hbs
+++ b/app/templates/components/dnd-char.hbs
@@ -6,6 +6,9 @@
     {{link-to 'Profile' 'char.profile' model}}
   </li>
   <li>
+    {{link-to 'Stats' 'char.stats' model}}
+  </li>
+  <li>
     {{link-to 'Powers' 'char.powers' model}}
   </li>
   <li>
