--- a/app/templates/components/char-stats.hbs
+++ b/app/templates/components/char-stats.hbs
@@ -1,13 +1,26 @@
-{{stats.exp}}
+exp: {{stats.exp}}
+<br>
+level: {{stats.level}}
+<br>
 {{stats.hp}}
+<br>
 {{stats.surge_value}}
+<br>
 {{stats.surges}}
+<br>
 {{stats.movement}}
-{{stats.strength}}
-{{stats.constitution}}
-{{stats.dexterity}}
-{{stats.intelligence}}
-{{stats.wisdom}}
-{{stats.charisma}}
+
+<br>
+
+Abilities
+
+<br>
+
+{{stats.abilities.strength}}
+{{stats.abilities.constitution}}
+{{stats.abilities.dexterity}}
+{{stats.abilities.intelligence}}
+{{stats.abilities.wisdom}}
+{{stats.abilities.charisma}}
 
 {{yield}}
