abilities bar chart

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -52,3 +52,12 @@ footer {
   padding: 7px 0;
   background-color: #ececec;
 }
+
+.abilities_chart div {
+  font: 10px sans-serif;
+  background-color: #8046B4;
+  text-align: right;
+  padding: 3px;
+  margin: 1px;
+  color: white;
+}
