--- a/app/templates/components/char-stats.hbs
+++ b/app/templates/components/char-stats.hbs
@@ -12,15 +12,10 @@ level: {{stats.level}}
 
 <br>
 
-Abilities
+<h5>Abilities</h5>
 
-<br>
-
-{{stats.abilities.strength}}
-{{stats.abilities.constitution}}
-{{stats.abilities.dexterity}}
-{{stats.abilities.intelligence}}
-{{stats.abilities.wisdom}}
-{{stats.abilities.charisma}}
+<div class="abilities_chart">
+  <!-- D3 -->
+</div>
 
 {{yield}}
